Fix row spacing issue

--- a/css/home.css
+++ b/css/home.css
@@ -10,13 +10,20 @@ body {
 
 .body-container {
     height: 1000px;
+    margin-bottom: -20px;
 }
 
 .sidebar-wrapper {
     height: 100%;
+    width:10%;
+    display:block;
 }
 
 .content-container {
     height: 100%;
+    width: 90%;
+    display: block;
 }
+
+
 
